# distributed-railway-interlocking-system

./: .gitignore  Authors.md  README.md  distributed-railway-interlocking-system.code-workspace  load_module.sh
Interlocking_system/: .cproject  .gitignore  .project  .wrproject
Interlocking_system/includes/: controlTask.h  destructorTask.h  diagnosticsTask.h  errors.h  global_variables.h  gpio.h  initTask.h  logTask.h  positioningTask.h  timerTask.h  wifiTask.h
Interlocking_system/src/: controlTask.c  destructorTask.c  diagnosticsTask.c  dkm.c  errors.c  global_variables.c  gpio.c  initTask.c  logTask.c  positioningTask.c  timerTask.c  wifiTask.c
connect/: README.md  build_example.config  build_module.sh  connect.sh  launch_connect.sh  launch_host.sh  launch_nodes.sh  load_module.sh  see_log.sh  tapo_control.py  target.txt  test.sh  workbench.sh
host_script/: client.py  host.py  log.py  log_parser.py  log_parser_dev.py  petri.xml  petri2.xml  petri_new.xml  petri_xml_formatter.py
rpivsb/: .cproject  .gitignore  .project  .wrproject  rpivsb.wpj  vsb.config  vsb_bs.vxconfig
test_script/: test_parsing  test_parsing.c
virtualized_raspberry/: CMakeLists.txt  istruzioniCompilazioneVirtualizedRaspberry.txt  launch_host.sh  launch_nodes.sh  main.c
virtualized_raspberry/debug/: debug_1.txt  debug_2.txt  debug_3.txt  debug_4.txt  debug_5.txt  debug_6.txt  debug_7.txt
virtualized_raspberry/includes/: errors.h  global_variables.h  initTask.h  my_debug.h  wifiTask.h
virtualized_raspberry/src/: dkm.c  global_variables.c  initTask.c  logTask.c  my_debug.c  wifiTask.c
(+19 files in other folders)
